--- a/output.css
+++ b/output.css
@@ -249,6 +249,9 @@
   .w-\[20px\] {
     width: 20px;
   }
+  .w-\[75px\] {
+    width: 75px;
+  }
   .w-\[80px\] {
     width: 80px;
   }
@@ -355,6 +358,9 @@
   }
   .p-\[10px\] {
     padding: 10px;
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -537,6 +543,11 @@
   .md\:w-\[200px\] {
     @media (width >= 48rem) {
       width: 200px;
+    }
+  }
+  .md\:w-\[250px\] {
+    @media (width >= 48rem) {
+      width: 250px;
     }
   }
   .md\:w-\[300px\] {
